--- a/index.html
+++ b/index.html
@@ -1,110 +1,103 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>朱乔玉的个人主页</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            padding: 50px;
-            background-color: #f4f4f4;
-        }
-        h1 {
-            color: #4CAF50;
-        }
-        h2 {
-            color: #333;
-        }
-        p {
-            font-size: 18px;
-        }
-        .content {
-            background-color: white;
-            padding: 20px;
-            margin: 20px auto;
-            border-radius: 10px;
-            width: 80%;
-            max-width: 800px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        }
-        .section {
-            margin-bottom: 30px;
-        }
-        .section h3 {
-            text-align: left;
-            color: #333;
-        }
-        .skills, .competitions {
-            text-align: left;
-            list-style-type: none;
-            padding-left: 0;
-        }
-        .skills li, .competitions li {
-            margin: 5px 0;
-        }
-        .contact {
-            text-align: center;
-            margin-top: 30px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Qiaoyu Zhu - Personal Homepage</title>
+  <style>
+    body {
+      font-family: "Times New Roman", serif;
+      margin: 40px auto;
+      max-width: 900px;
+      line-height: 1.6;
+      color: #333;
+    }
+    h1 {
+      color: #003366;
+      border-bottom: 2px solid #003366;
+      padding-bottom: 5px;
+    }
+    h2 {
+      color: #003366;
+      margin-top: 30px;
+      border-bottom: 1px solid #ccc;
+      padding-bottom: 3px;
+    }
+    p, li {
+      font-size: 16px;
+    }
+    .info {
+      margin-bottom: 20px;
+    }
+    .info strong {
+      display: inline-block;
+      width: 100px;
+    }
+    ul {
+      margin: 0;
+      padding-left: 20px;
+    }
+  </style>
 </head>
 <body>
 
-    <h1>朱乔玉的个人主页</h1>
+  <h1>Qiaoyu Zhu 朱乔玉</h1>
 
-    <div class="content">
-        <section class="section">
-            <h2>个人信息</h2>
-            <p><strong>姓名：</strong>朱乔玉</p>
-            <p><strong>性别：</strong>男</p>
-            <p><strong>出生年月：</strong>2004年7月</p>
-            <p><strong>邮箱：</strong><a href="mailto:qiaoyuzhu.stu@gmail.com">qiaoyuzhu.stu@gmail.com</a></p>
-            <p><strong>联系电话：</strong>15170627873</p>
-        </section>
+  <div class="info">
+    <p><strong>Email:</strong> <a href="mailto:qiaoyuzhu.stu@gmail.com">qiaoyuzhu.stu@gmail.com</a></p>
+    <p><strong>Tel:</strong> +86-15170627873</p>
+    <p><strong>Birth:</strong> July 2004</p>
+    <p><strong>Political Status:</strong> Member of the Communist Youth League</p>
+  </div>
 
-        <section class="section">
-            <h2>教育经历</h2>
-            <p><strong>深圳大学</strong> (2022.09 - 至今)</p>
-            <p><strong>专业：</strong>信息与计算科学(数学与计算机实验班)</p>
-            <p><strong>GPA：</strong>3.9/4.5 | <strong>专业排名：</strong>3/11</p>
-            <p><strong>核心课程：</strong>数值分析(A+), 计算机图形学(A), 计算机游戏开发(A+), 算法设计与分析(A), 面向对象程序设计(C++)(A), 等</p>
-        </section>
+  <h2>Biography</h2>
+  <p>
+    I am currently an undergraduate student in the <strong>School of Mathematical Sciences, Shenzhen University</strong>, majoring in Information and Computing Science (Experimental Class of Mathematics and Computer Science).  
+    My academic interests lie in <em>computer vision, artificial intelligence, and applied mathematics</em>.  
+    I have participated in several competitions and research projects, achieving strong results in AI visual applications and intelligent systems.
+  </p>
 
-        <section class="section">
-            <h2>竞赛经历</h2>
-            <ul class="competitions">
-                <li>2025.08  2025睿抗机器人开发者大赛全国总决赛编程技能赛项二等奖</li>
-                <li>2025.07  2025睿抗机器人开发者大赛广东赛区 AI视觉应用赛项一等奖</li>
-                <li>2025.05  第十六届蓝桥杯软件赛广东赛区 C/C++ 程序设计大学B组一等奖</li>
-                <li>2025.07  2025睿抗机器人开发者大赛广东赛区编程技能赛项二等奖</li>
-                <li>2025.06  2025年广东省大学生计算机设计大赛 AI视觉应用创新挑战赛三等奖</li>
-            </ul>
-        </section>
+  <h2>Education</h2>
+  <ul>
+    <li><strong>2022.09 – Present</strong>  
+        B.Sc. in Information and Computing Science, Shenzhen University  
+        GPA: 3.9/4.5 | Ranking: 3/11  
+        Selected Courses: Numerical Analysis (A+), Computer Graphics (A), Game Development (A+), Algorithms (A), Probability & Statistics (A), Linear Algebra (A), Mathematical Analysis (A)</li>
+  </ul>
 
-        <section class="section">
-            <h2>技能</h2>
-            <ul class="skills">
-                <li>C/C++, Python</li>
-                <li>Linux, Git</li>
-                <li>Latex, Office</li>
-                <li>英语：CET-4, CET-6</li>
-            </ul>
-        </section>
+  <h2>Competitions</h2>
+  <ul>
+    <li>2025.08 – RAICOM National Final (Programming Skills) – <strong>Second Prize</strong></li>
+    <li>2025.07 – RAICOM Guangdong (AI Vision Application) – <strong>First Prize</strong></li>
+    <li>2025.07 – RAICOM Guangdong (Programming Skills) – <strong>Second Prize</strong></li>
+    <li>2025.06 – Guangdong Undergraduate Computer Design Contest (AI Vision Challenge) – <strong>Third Prize</strong></li>
+    <li>2025.05 – 16th Blue Bridge Cup (C/C++ Programming, Guangdong Division, Group B) – <strong>First Prize</strong></li>
+  </ul>
 
-        <section class="section">
-            <h2>项目经验</h2>
-            <p><strong>小麦条锈病语义分割模型研究</strong> (2024.12 - 2025.06)</p>
-            <p>核心成员，提出创新点DVIT-TAN-UNet架构，提升病斑特征提取能力，达到了Dice 78.21%/85.03%。</p>
-            <p><strong>食品包装生产日期与保质期自动识别系统</strong> (2025.04 - 2025.06)</p>
-            <p>核心成员，基于YOLOv11n开发AI视觉系统，实现高精度毫秒级动态识别，获广东省一等奖。</p>
-        </section>
-    </div>
+  <h2>Skills</h2>
+  <ul>
+    <li><strong>Programming:</strong> C/C++, Python</li>
+    <li><strong>Tools:</strong> Linux, Git, LaTeX, Office</li>
+    <li><strong>Languages:</strong> English CET-4, CET-6</li>
+  </ul>
 
-    <div class="contact">
-        <p>欢迎通过 <a href="mailto:qiaoyuzhu.stu@gmail.com">邮件</a> 联系我。</p>
-    </div>
+  <h2>Projects</h2>
+  <ul>
+    <li><strong>Wheat Stripe Rust Semantic Segmentation (2024.12 – 2025.06)</strong><br>
+      Developed DVIT-TAN-UNet architecture with dual self-attention and triple nested attention mechanisms.  
+      Achieved Dice score of 85.03% on benchmark datasets and cross-crop generalization (Rice: 76.30%).
+    </li>
+    <li><strong>Automatic Date & Expiry Recognition System (2025.04 – 2025.06)</strong><br>
+      Built an AI vision system based on YOLOv11n and lightweight OCR for real-time food package inspection.  
+      Achieved millisecond-level recognition (<0.5s per sample). Awarded RAICOM Guangdong First Prize (AI Vision).
+    </li>
+  </ul>
+
+  <h2>Contact</h2>
+  <p>
+    Feel free to reach out via <a href="mailto:qiaoyuzhu.stu@gmail.com">email</a>.  
+    You can also find my projects on <a href="https://github.com/你的用户名" target="_blank">GitHub</a>.
+  </p>
 
 </body>
 </html>
