--- a/index.html
+++ b/index.html
@@ -37,6 +37,17 @@
       margin: 0;
       padding-left: 20px;
     }
+    .bio {
+      position: relative;
+      overflow: auto;
+    }
+    .bio img {
+      float: right;
+      width: 160px;
+      border-radius: 8px;
+      margin-left: 20px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    }
   </style>
 </head>
 <body>
@@ -51,11 +62,15 @@
   </div>
 
   <h2>Biography</h2>
-  <p>
-    I am currently an undergraduate student in the <strong>School of Mathematical Sciences, Shenzhen University</strong>, majoring in Information and Computing Science (Experimental Class of Mathematics and Computer Science).  
-    My academic interests lie in <em>computer vision, artificial intelligence, and applied mathematics</em>.  
-    I have participated in several competitions and research projects, achieving strong results in AI visual applications and intelligent systems.
-  </p>
+  <div class="bio">
+    <img src="photo.jpg" alt="Profile Photo">
+    <p>
+      I am currently an undergraduate student in the <strong>School of Mathematical Sciences, Shenzhen University</strong>, 
+      majoring in Information and Computing Science (Experimental Class of Mathematics and Computer Science).  
+      My academic interests lie in <em>computer vision, artificial intelligence, and applied mathematics</em>.  
+      I have participated in several competitions and research projects, achieving strong results in AI visual applications and intelligent systems.
+    </p>
+  </div>
 
   <h2>Education</h2>
   <ul>
