--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
   <h2>Biography</h2>
   <div class="bio">
-    <img src="photo.jpg" alt="Profile Photo">
+    <img src="photo.png" alt="Profile Photo">
     <p>
       I am currently an undergraduate student in the <strong>School of Mathematical Sciences, Shenzhen University</strong>, 
       majoring in Information and Computing Science (Experimental Class of Mathematics and Computer Science).  
