--- a/index.html
+++ b/index.html
@@ -26,27 +26,30 @@
     p, li {
       font-size: 16px;
     }
-    .info {
+    .info-container {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
       margin-bottom: 20px;
+    }
+    .info {
+      flex: 1;
     }
     .info strong {
       display: inline-block;
-      width: 100px;
+      width: 120px;
+    }
+    .profile-photo {
+      margin-left: 20px;
+    }
+    .profile-photo img {
+      width: 160px;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
     }
     ul {
       margin: 0;
       padding-left: 20px;
-    }
-    .bio {
-      position: relative;
-      overflow: auto;
-    }
-    .bio img {
-      float: right;
-      width: 160px;
-      border-radius: 8px;
-      margin-left: 20px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
     }
   </style>
 </head>
@@ -54,23 +57,25 @@
 
   <h1>Qiaoyu Zhu 朱乔玉</h1>
 
-  <div class="info">
-    <p><strong>Email:</strong> <a href="mailto:qiaoyuzhu.stu@gmail.com">qiaoyuzhu.stu@gmail.com</a></p>
-    <p><strong>Tel:</strong> +86-15170627873</p>
-    <p><strong>Birth:</strong> July 2004</p>
-    <p><strong>Political Status:</strong> Member of the Communist Youth League</p>
+  <div class="info-container">
+    <div class="info">
+      <p><strong>Email:</strong> <a href="mailto:qiaoyuzhu.stu@gmail.com">qiaoyuzhu.stu@gmail.com</a></p>
+      <p><strong>Tel:</strong> +86-15170627873</p>
+      <p><strong>Birth:</strong> July 2004</p>
+      <p><strong>Political Status:</strong> Member of the Communist Youth League</p>
+    </div>
+    <div class="profile-photo">
+      <img src="photo.jpg" alt="Profile Photo">
+    </div>
   </div>
 
   <h2>Biography</h2>
-  <div class="bio">
-    <img src="photo.png" alt="Profile Photo">
-    <p>
-      I am currently an undergraduate student in the <strong>School of Mathematical Sciences, Shenzhen University</strong>, 
-      majoring in Information and Computing Science (Experimental Class of Mathematics and Computer Science).  
-      My academic interests lie in <em>computer vision, artificial intelligence, and applied mathematics</em>.  
-      I have participated in several competitions and research projects, achieving strong results in AI visual applications and intelligent systems.
-    </p>
-  </div>
+  <p>
+    I am currently an undergraduate student in the <strong>School of Mathematical Sciences, Shenzhen University</strong>, 
+    majoring in Information and Computing Science (Experimental Class of Mathematics and Computer Science).  
+    My academic interests lie in <em>computer vision, artificial intelligence, and applied mathematics</em>.  
+    I have participated in several competitions and research projects, achieving strong results in AI visual applications and intelligent systems.
+  </p>
 
   <h2>Education</h2>
   <ul>
