--- a/index.html
+++ b/index.html
@@ -111,11 +111,9 @@
       Achieved millisecond-level recognition (<0.5s per sample). Awarded RAICOM Guangdong First Prize (AI Vision).
     </li>
   </ul>
-
-  <h2>Contact</h2>
-  <p>
-    Feel free to reach out via <a href="mailto:qiaoyuzhu.stu@gmail.com">email</a>.  
-    You can also find my projects on <a href="https://github.com/你的用户名" target="_blank">GitHub</a>.
+<hr>
+  <p style="text-align: center; color: #999; font-size: 14px; margin-top: 10px;">
+    © Qiaoyu Zhu. VISUAL COMPUTING RESEARCH CENTER.
   </p>
 
 </body>
