--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
     }
     .info strong {
       display: inline-block;
-      width: 120px;
+      width: auto;     /* ← 改成自动宽度 */
+      margin-right: 10px; /* ← 自然留点小间隔 */
     }
     .profile-photo {
       margin-left: 20px;
@@ -62,6 +63,7 @@
       <p><strong>Email:</strong> <a href="mailto:qiaoyuzhu.stu@gmail.com">qiaoyuzhu.stu@gmail.com</a></p>
       <p><strong>Tel:</strong> +86-15170627873</p>
       <p><strong>Birth:</strong> July 2004</p>
+      <p><strong>Location:</strong> Room 702, Building L6, South Campus of Shenzhen</p>
     </div>
     <div class="profile-photo">
       <img src="photo.jpg" alt="Profile Photo">
