--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <p>
     I am currently an undergraduate student in the <strong>School of Mathematical Sciences, Shenzhen University</strong>, 
     majoring in Information and Computing Science (Experimental Class of Mathematics and Computer Science).  
-    My academic interests lie in <em>computer vision, artificial intelligence, and applied mathematics</em>.  
+    My academic interests lie in <em>Geometric Modeling & Analysis, Point Clouds Processing and Instance Segmentation</em>.  
     I have participated in several competitions and research projects, achieving strong results in AI visual applications and intelligent systems.
   </p>
 
