--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <p><strong>Location:</strong> Room 702, Building L6, South Campus of Shenzhen</p>
     </div>
     <div class="profile-photo">
-      <img src="photo.jpg" alt="Profile Photo">
+      <img src="photo.png" alt="Profile Photo">
     </div>
   </div>
 
@@ -95,24 +95,6 @@
     <li>2025.05 – 16th Blue Bridge Cup (C/C++ Programming, Guangdong Division, Group B) – <strong>First Prize</strong></li>
   </ul>
 
-  <h2>Skills</h2>
-  <ul>
-    <li><strong>Programming:</strong> C/C++, Python</li>
-    <li><strong>Tools:</strong> Linux, Git, LaTeX, Office</li>
-    <li><strong>Languages:</strong> English CET-4, CET-6</li>
-  </ul>
-
-  <h2>Projects</h2>
-  <ul>
-    <li><strong>Wheat Stripe Rust Semantic Segmentation (2024.12 – 2025.06)</strong><br>
-      Developed DVIT-TAN-UNet architecture with dual self-attention and triple nested attention mechanisms.  
-      Achieved Dice score of 85.03% on benchmark datasets and cross-crop generalization (Rice: 76.30%).
-    </li>
-    <li><strong>Automatic Date & Expiry Recognition System (2025.04 – 2025.06)</strong><br>
-      Built an AI vision system based on YOLOv11n and lightweight OCR for real-time food package inspection.  
-      Achieved millisecond-level recognition (<0.5s per sample). Awarded RAICOM Guangdong First Prize (AI Vision).
-    </li>
-  </ul>
 <hr>
   <p style="text-align: center; color: #999; font-size: 14px; margin-top: 10px;">
     © Qiaoyu Zhu. VISUAL COMPUTING RESEARCH CENTER.
