--- a/index.html
+++ b/index.html
@@ -14,13 +14,18 @@
     }
     h1 {
       color: #003366;
-      border-bottom: 2px solid #003366;
-      padding-bottom: 5px;
+      margin-bottom: 5px; /* 缩小与下方文字的间隔 */
+      border-bottom: none; /* 去掉横线 */
+    }
+    .subtitle {
+      color: #003366;   /* 和 Biography 标题颜色一致 */
+      font-size: 16px;  /* 和 Email 字体一样大 */
+      margin-bottom: 15px;
     }
     h2 {
       color: #003366;
       margin-top: 30px;
-      border-bottom: 1px solid #ccc;
+      border-bottom: 2px solid #ccc;
       padding-bottom: 3px;
     }
     p, li {
@@ -37,14 +42,14 @@
     }
     .info strong {
       display: inline-block;
-      width: auto;     /* ← 改成自动宽度 */
-      margin-right: 10px; /* ← 自然留点小间隔 */
+      width: auto;
+      margin-right: 10px;
     }
     .profile-photo {
       margin-left: 20px;
     }
     .profile-photo img {
-      width: 160px;
+      width: 130px; /* 缩小照片 */
       border-radius: 8px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.2);
     }
@@ -57,6 +62,7 @@
 <body>
 
   <h1>Qiaoyu Zhu 朱乔玉</h1>
+  <div class="subtitle">Undergraduate</div>
 
   <div class="info-container">
     <div class="info">
@@ -95,10 +101,11 @@
     <li>2025.05 – 16th Blue Bridge Cup (C/C++ Programming, Guangdong Division, Group B) – <strong>First Prize</strong></li>
   </ul>
 
-<hr>
-  <p style="text-align: center; color: #999; font-size: 14px; margin-top: 10px;">
-    © Qiaoyu Zhu. VISUAL COMPUTING RESEARCH CENTER.
-  </p>
+  <div style="border-top: 2px solid #ccc; margin-top: 40px; padding-top: 10px;">
+    <p style="text-align: center; color: #999; font-size: 14px;">
+      © Qiaoyu Zhu. VISUAL COMPUTING RESEARCH CENTER.
+    </p>
+  </div>
 
 </body>
 </html>
