--- a/index.html
+++ b/index.html
@@ -78,10 +78,7 @@
 
   <h2>Biography</h2>
   <p>
-    I am currently an undergraduate student in the <strong>School of Mathematical Sciences, Shenzhen University</strong>, 
-    majoring in Information and Computing Science (Experimental Class of Mathematics and Computer Science).  
-    My academic interests lie in <em>Geometric Modeling & Analysis, Point Clouds Processing and Instance Segmentation</em>.  
-    I have participated in several competitions and research projects, achieving strong results in AI visual applications and intelligent systems.
+  I am Qiaoyu Zhu, a senior undergraduate in the Experimental Class of Mathematics and Computer Science, School of Mathematical Sciences, Shenzhen University.  I am currently an intern at the <a href="https://vcc.tech/" target="_blank">Visual Computing Research Center (VCC)</a>, School of Computer Science & Software Engineering, and will continue at VCC as a direct-entry Ph.D. student under the supervision of Prof. <a href="https://vcc.tech/~huihuang/home" target="_blank">Hui Huang</a>.
   </p>
 
   <h2>Education</h2>
