--- a/index.html
+++ b/index.html
@@ -62,10 +62,9 @@
 <body>
 
   <h1>Qiaoyu Zhu 朱乔玉</h1>
-  <div class="subtitle">Undergraduate</div>
-
   <div class="info-container">
     <div class="info">
+      <div class="subtitle">Undergraduate</div>
       <p><strong>Email:</strong> <a href="mailto:qiaoyuzhu.stu@gmail.com">qiaoyuzhu.stu@gmail.com</a></p>
       <p><strong>Tel:</strong> +86-15170627873</p>
       <p><strong>Birth:</strong> July 2004</p>
@@ -78,7 +77,7 @@
 
   <h2>Biography</h2>
   <p>
-  I am Qiaoyu Zhu, a senior undergraduate in the Experimental Class of Mathematics and Computer Science, School of Mathematical Sciences, Shenzhen University.  I am currently an intern at the <a href="https://vcc.tech/" target="_blank">Visual Computing Research Center (VCC)</a>, School of Computer Science & Software Engineering, and will continue at VCC as a direct-entry Ph.D. student under the supervision of Prof. <a href="https://vcc.tech/~huihuang/home" target="_blank">Hui Huang</a>.
+  I am Qiaoyu Zhu, a senior undergraduate in the Experimental Class of Mathematics and Computer Science, School of Mathematical Sciences, Shenzhen University. I am currently an intern at the <a href="https://vcc.tech/" target="_blank">Visual Computing Research Center (VCC)</a>, College of Computer Science & Software Engineering, and will continue at VCC as a direct-entry Ph.D. student under the supervision of <a href="https://vcc.tech/~huihuang/home" target="_blank">Prof. Hui Huang</a>.
   </p>
 
   <h2>Education</h2>
