--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       margin-left: 20px;
     }
     .profile-photo img {
-      width: 130px; /* 缩小照片 */
+      width: 100px; /* 缩小照片 */
       border-radius: 8px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.2);
     }
@@ -82,10 +82,7 @@
 
   <h2>Education</h2>
   <ul>
-    <li><strong>2022.09 – Present</strong>  
-        B.Sc. in Information and Computing Science, Shenzhen University  
-        GPA: 3.9/4.5 | Ranking: 3/11  
-        Selected Courses: Numerical Analysis (A+), Computer Graphics (A), Game Development (A+), Algorithms (A), Probability & Statistics (A), Linear Algebra (A), Mathematical Analysis (A)</li>
+    <li><strong>2022.09 – Present</strong>, B.Sc. in Information and Computing Science, Shenzhen University, GPA: 3.9/4.5, Ranking: 3/11</li>
   </ul>
 
   <h2>Competitions</h2>
