--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       margin-left: 20px;
     }
     .profile-photo img {
-      width: 100px; /* 缩小照片 */
+      width: 120px; /* 缩小照片 */
       border-radius: 8px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.2);
     }
@@ -94,7 +94,7 @@
     <li>2025.05 – 16th Blue Bridge Cup (C/C++ Programming, Guangdong Division, Group B) – <strong>First Prize</strong></li>
   </ul>
 
-  <div style="border-top: 2px solid #ccc; margin-top: 40px; padding-top: 10px;">
+  <div style="border-top: 2px solid #ccc; margin-top: 40px;">
     <p style="text-align: center; color: #999; font-size: 14px;">
       © Qiaoyu Zhu. VISUAL COMPUTING RESEARCH CENTER.
     </p>
