--- a/index.html
+++ b/index.html
@@ -5,61 +5,68 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Qiaoyu Zhu - Personal Homepage</title>
   <style>
-    body {
-      font-family: "Times New Roman", serif;
-      margin: 40px auto;
-      max-width: 900px;
-      line-height: 1.6;
-      color: #333;
+    /* ========= 纸式自适应 ========= */
+    body{
+      margin:0;
+      background:#f2f2f2;
+      font-family:"Times New Roman",serif;
+      line-height:1.6;
+      color:#333;
+
+      /* 让 body 高度撑满，方便页脚沉底 */
+      min-height:100vh;
+      display:flex;
+      flex-direction:column;
     }
-    h1 {
-      color: #003366;
-      margin-bottom: 5px; /* 缩小与下方文字的间隔 */
-      border-bottom: none; /* 去掉横线 */
+
+    .paper{
+      flex:1;                           /* 占满剩余高度 */
+      width:230mm;                      
+      min-height:297mm;                 /* 至少 A4 高，内容多可继续伸 */
+      margin:20px auto;
+      background:#fff;
+      box-shadow:0 0 10px rgba(0,0,0,.15);
+      border-radius:4px;
+      padding:40px;
+      box-sizing:border-box;
+
+      /* 打印时恢复标准 A4，去掉阴影 */
+      @media print{
+        width:210mm;
+        min-height:297mm;
+        margin:0;
+        box-shadow:none;
+        border-radius:0;
+      }
     }
-    .subtitle {
-      color: #003366;   /* 和 Biography 标题颜色一致 */
-      font-size: 16px;  /* 和 Email 字体一样大 */
-      margin-bottom: 15px;
-    }
-    h2 {
-      color: #003366;
-      margin-top: 30px;
-      border-bottom: 2px solid #ccc;
-      padding-bottom: 3px;
-    }
-    p, li {
-      font-size: 16px;
-    }
-    .info-container {
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-start;
-      margin-bottom: 20px;
-    }
-    .info {
-      flex: 1;
-    }
-    .info strong {
-      display: inline-block;
-      width: auto;
-      margin-right: 10px;
-    }
-    .profile-photo {
-      margin-left: 20px;
-    }
-    .profile-photo img {
-      width: 120px; /* 缩小照片 */
-      border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-    }
-    ul {
-      margin: 0;
-      padding-left: 20px;
+
+
+    /* ---------- 你原来的样式 ---------- */
+    h1{color:#003366;margin-bottom:5px;border-bottom:none;}
+    .subtitle{color:#003366;font-size:16px;margin-bottom:15px;}
+    h2{color:#003366;margin-top:30px;border-bottom:2px solid #ccc;padding-bottom:3px;}
+    p,li{font-size:16px;}
+    .info-container{display:flex;justify-content:space-between;align-items:flex-start;margin-bottom:20px;}
+    .info{flex:1;}
+    .info strong{display:inline-block;margin-right:10px;}
+    .profile-photo{margin-left:20px;}
+    .profile-photo img{width:130px;border-radius:8px;box-shadow:0 2px 6px rgba(0,0,0,.2);}
+    ul{margin:0;padding-left:20px;}
+
+    /* 页脚永远沉在纸最底部 */
+    .footer{
+      border-top:2px solid #ccc;
+      margin-top:30px;
+      padding-top:10px;
+      text-align:center;
+      font-size:12px;
+      color:#999;
     }
   </style>
 </head>
 <body>
+
+<div class="paper">   <!-- 纸开始 -->
 
   <h1>Qiaoyu Zhu 朱乔玉</h1>
   <div class="info-container">
@@ -77,7 +84,7 @@
 
   <h2>Biography</h2>
   <p>
-  I am Qiaoyu Zhu, a senior undergraduate in the Experimental Class of Mathematics and Computer Science, School of Mathematical Sciences, Shenzhen University. I am currently an intern at the <a href="https://vcc.tech/" target="_blank">Visual Computing Research Center (VCC)</a>, College of Computer Science & Software Engineering, and will continue at VCC as a direct-entry Ph.D. student under the supervision of <a href="https://vcc.tech/~huihuang/home" target="_blank">Prof. Hui Huang</a>.
+    I am Qiaoyu Zhu, a senior undergraduate in the Experimental Class of Mathematics and Computer Science, School of Mathematical Sciences, Shenzhen University. I am currently an intern at the <a href="https://vcc.tech/" target="_blank">Visual Computing Research Center (VCC)</a>, College of Computer Science & Software Engineering, and will continue at VCC as a direct-entry Ph.D. student under the supervision of <a href="https://vcc.tech/~huihuang/home" target="_blank">Prof. Hui Huang</a>.
   </p>
 
   <h2>Education</h2>
@@ -94,11 +101,11 @@
     <li>2025.05 – 16th Blue Bridge Cup (C/C++ Programming, Guangdong Division, Group B) – <strong>First Prize</strong></li>
   </ul>
 
-  <div style="border-top: 2px solid #ccc; margin-top: 10px;">
-    <p style="text-align: center; color: #999; font-size: 12px;">
-      © Qiaoyu Zhu. VISUAL COMPUTING RESEARCH CENTER.
-    </p>
+  <div class="footer">
+    © Qiaoyu Zhu. VISUAL COMPUTING RESEARCH CENTER.
   </div>
+
+</div>   <!-- 纸结束 -->
 
 </body>
 </html>
