--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <h1>Qiaoyu Zhu 朱乔玉</h1>
   <div class="info-container">
     <div class="info">
-      <div class="subtitle">Undergraduate</div>
+      <div class="subtitle">Undergraduate、Intern at VCC</div>
       <p><strong>Email:</strong> <a href="mailto:qiaoyuzhu.stu@gmail.com">qiaoyuzhu.stu@gmail.com</a></p>
       <p><strong>Tel:</strong> +86-15170627873</p>
       <p><strong>Birth:</strong> July 2004</p>
