--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     }
 
 
-    h1{color:#003366;margin-bottom:5px;border-bottom:none;}
-    .subtitle{color:#003366;font-size:16px;margin-bottom:15px;}
-    h2{color:#003366;margin-top:30px;border-bottom:2px solid #ccc;padding-bottom:3px;}
+    h1{color:#527bbd;margin-bottom:5px;border-bottom:none;}
+    .subtitle{color:#527bbd;font-size:16px;margin-bottom:15px;}
+    h2{color:#527bbd;margin-top:30px;border-bottom:2px solid #ccc;padding-bottom:3px;}
     p,li{font-size:16px;}
     .info-container{display:flex;justify-content:space-between;align-items:flex-start;margin-bottom:20px;}
     .info{flex:1;}
@@ -57,17 +57,27 @@
       font-size:12px;
       color:#999;
     }
+    a{
+        color:#527bbd;
+        text-decoration:none;
+        outline:none;            
+    }
+    a:hover{
+      text-decoration:none;             
+      border-bottom:1px dashed #999;
+      outline:none;
+    }
   </style>
 </head>
 <body>
 
-<div class="paper">   <!-- 纸开始 -->
+<div class="paper">  
 
   <h1>Qiaoyu Zhu 朱乔玉</h1>
   <div class="info-container">
     <div class="info">
-      <div class="subtitle">Undergraduate、Intern at VCC</div>
-      <p><strong>Email:</strong> <a href="mailto:qiaoyuzhu.stu@gmail.com">qiaoyuzhu.stu@gmail.com</a></p>
+      <div class="subtitle"><strong>Undergraduate、Intern at VCC</strong></div>
+      <p><strong>Email:</strong> qiaoyuzhu.stu@gmail.com</p>
       <p><strong>Tel:</strong> +86-15170627873</p>
       <p><strong>Birth:</strong> July 2004</p>
       <p><strong>Location:</strong> Room 702, Building L6, South Campus of Shenzhen</p>
@@ -79,12 +89,12 @@
 
   <h2>Biography</h2>
   <p>
-    I am Qiaoyu Zhu, a senior undergraduate in the Experimental Class of Mathematics and Computer Science, School of Mathematical Sciences, Shenzhen University. I am currently an intern at the <a href="https://vcc.tech/" target="_blank">Visual Computing Research Center (VCC)</a>, College of Computer Science & Software Engineering, and will continue at VCC as a direct-entry Ph.D. student under the supervision of <a href="https://vcc.tech/~huihuang/home" target="_blank">Prof. Hui Huang</a>.
+    I am Qiaoyu Zhu, a senior undergraduate in the Experimental Class of Mathematics and Computer Science, <a href="https://math.szu.edu.cn/" target="_blank"> School of Mathematical Sciences, <a href="https://www.szu.edu.cn/" target="_blank">Shenzhen University</a>. I am currently an intern at the <a href="https://vcc.tech/" target="_blank">Visual Computing Research Center (VCC)</a>, College of Computer Science & Software Engineering, and will continue at VCC as a direct-entry Ph.D. student under the supervision of <a href="https://vcc.tech/~huihuang/home" target="_blank">Prof. Hui Huang</a>.
   </p>
 
   <h2>Education</h2>
   <ul>
-    <li><strong>2022.09 – Present</strong>, B.Sc. in Information and Computing Science (Major) and Computer Science and Technology (Minor), Shenzhen University, GPA: 3.9/4.5, Ranking: 3/11.</li>
+    <li><strong>2022.09 – Present</strong>, B.Sc. in Information and Computing Science (Major) and Computer Science and Technology (Minor), <a href="https://www.szu.edu.cn/" target="_blank">Shenzhen University</a>.</li>
   </ul>
 
   <h2>Competitions</h2>
@@ -100,7 +110,7 @@
     © Qiaoyu Zhu. VISUAL COMPUTING RESEARCH CENTER.
   </div>
 
-</div>   <!-- 纸结束 -->
+</div> 
 
 </body>
 </html>
