--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
 
   <h2>Competitions</h2>
   <ul>
-    <li>2025.08 – RAICOM National Final (Programming Skills) – <strong>Second Prize</strong></li>
-    <li>2025.07 – RAICOM Guangdong (AI Vision Application) – <strong>First Prize</strong></li>
-    <li>2025.07 – RAICOM Guangdong (Programming Skills) – <strong>Second Prize</strong></li>
-    <li>2025.06 – Guangdong Undergraduate Computer Design Contest (AI Vision Challenge) – <strong>Third Prize</strong></li>
-    <li>2025.05 – 16th Blue Bridge Cup (C/C++ Programming, Guangdong Division, Group B) – <strong>First Prize</strong></li>
+    <li><strong>2025.08</strong>  RAICOM National Final (Programming Skills) – <strong>Second Prize</strong></li>
+    <li><strong>2025.07</strong>  RAICOM Guangdong (AI Vision Application) – <strong>First Prize</strong></li>
+    <li><strong>2025.07</strong>  RAICOM Guangdong (Programming Skills) – <strong>Second Prize</strong></li>
+    <li><strong>2025.06</strong>  Guangdong Undergraduate Computer Design Contest (AI Vision Challenge) – <strong>Third Prize</strong></li>
+    <li><strong>2025.05</strong>  16th Blue Bridge Cup (C/C++ Programming, Guangdong Division, Group B) – <strong>First Prize</strong></li>
   </ul>
 
   <div class="footer">
