--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
   <h2>Biography</h2>
   <p>
-    I am Qiaoyu Zhu, a senior undergraduate in the Experimental Class of Mathematics and Computer Science, <a href="https://math.szu.edu.cn/" target="_blank"> School of Mathematical Sciences, <a href="https://www.szu.edu.cn/" target="_blank">Shenzhen University</a>. I am currently an intern at the <a href="https://vcc.tech/" target="_blank">Visual Computing Research Center (VCC)</a>, <a href="https://csse.szu.edu.cn/" target="_blank">College of Computer Science & Software Engineering</a>, and will continue at VCC as a direct-entry Ph.D. student under the supervision of <a href="https://vcc.tech/~huihuang/home" target="_blank">Prof. Hui Huang</a>.
+    I am Qiaoyu Zhu, a senior undergraduate in the Experimental Class of Mathematics and Computer Science, <a href="https://math.szu.edu.cn/" target="_blank"> School of Mathematical Sciences</a>, <a href="https://www.szu.edu.cn/" target="_blank">Shenzhen University</a>. I am currently an intern at the <a href="https://vcc.tech/" target="_blank">Visual Computing Research Center (VCC)</a>, <a href="https://csse.szu.edu.cn/" target="_blank">College of Computer Science & Software Engineering</a>, and will continue at VCC as a direct-entry Ph.D. student under the supervision of <a href="https://vcc.tech/~huihuang/home" target="_blank">Prof. Hui Huang</a>.
   </p>
 
   <h2>Education</h2>
