--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
   <h2>Education</h2>
   <ul>
-    <li><strong>2022.09 – Present</strong>, B.Sc. in Information and Computing Science (Major) and Computer Science and Technology (Minor), <a href="https://www.szu.edu.cn/" target="_blank">Shenzhen University</a>.</li>
+    <li><strong>2022.09 – Present</strong>, B.Sc. in Information and Computing Science (Major) and Computer Science and Technology (Minor), <a href="https://math.szu.edu.cn/" target="_blank"> School of Mathematical Sciences</a>, <a href="https://www.szu.edu.cn/" target="_blank">Shenzhen University</a>.</li>
   </ul>
 
   <h2>Competitions</h2>
