--- a/index.html
+++ b/index.html
@@ -97,8 +97,9 @@
     <li><strong>2022.09 – Present</strong>, B.Sc. in Information and Computing Science (Major) and Computer Science and Technology (Minor), <a href="https://math.szu.edu.cn/" target="_blank"> School of Mathematical Sciences</a>, <a href="https://www.szu.edu.cn/" target="_blank">Shenzhen University</a>.</li>
   </ul>
 
-  <h2>Competitions</h2>
+  <h2>Competitions & Honors</h2>
   <ul>
+    <li><strong>2025.10</strong> &nbsp; Star of Double Innovations – <strong>Second Prize</strong></li>
     <li><strong>2025.08</strong> &nbsp; RAICOM National Final (Programming Skills) – <strong>Second Prize</strong></li>
     <li><strong>2025.07</strong> &nbsp; RAICOM Guangdong (AI Vision Application) – <strong>First Prize</strong></li>
     <li><strong>2025.07</strong> &nbsp; RAICOM Guangdong (Programming Skills) – <strong>Second Prize</strong></li>
