--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
   <h2>Competitions & Honors</h2>
   <ul>
-    <li><strong>2025.10</strong> &nbsp; Star of Double Innovations – <strong>Second Prize</strong></li>
+    <li><strong>2025.10</strong> &nbsp; Shenzhen University "Star of Double Innovations" – <strong>Second Prize</strong></li>
     <li><strong>2025.08</strong> &nbsp; RAICOM National Final (Programming Skills) – <strong>Second Prize</strong></li>
     <li><strong>2025.07</strong> &nbsp; RAICOM Guangdong (AI Vision Application) – <strong>First Prize</strong></li>
     <li><strong>2025.07</strong> &nbsp; RAICOM Guangdong (Programming Skills) – <strong>Second Prize</strong></li>
