Add competition and honor achievements to index.html

--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
 
   <h2>Competitions & Honors</h2>
   <ul>
+    <li><strong>2025.10</strong> &nbsp; 2025 7th National University Computer Competency Challenge - Programming Contest (C++ Undergraduate & Graduate Group, South China Region) – <strong>Third Prize</strong></li>
     <li><strong>2025.10</strong> &nbsp; RAICOM National Final (AI Vision Application) – <strong>First Prize</strong></li>
+    <li><strong>2025.10</strong> &nbsp; Shenzhen University 2024-2025 Academic Year "Star of Double Innovations (Group)" – <strong>Second Prize</strong></li>
     <li><strong>2025.10</strong> &nbsp; Shenzhen University 2024-2025 Academic Year "Star of Double Innovations" – <strong>Second Prize</strong></li>
     <li><strong>2025.08</strong> &nbsp; RAICOM National Final (Programming Skills) – <strong>Second Prize</strong></li>
     <li><strong>2025.07</strong> &nbsp; RAICOM Guangdong (AI Vision Application) – <strong>First Prize</strong></li>
