--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
   <h2>Competitions & Honors</h2>
   <ul>
-    <li><strong>2025.12</strong> &nbsp; 2025 7th NCCCU - Programming Contest (C++ Undergraduate & Graduate Group, South China Region) – <strong>Third Prize</strong></li>
+    <li><strong>2025.12</strong> &nbsp; 2025 7th NCCCU - C++ Programming (South China Region) – <strong>Third Prize</strong></li>
     <li><strong>2025.10</strong> &nbsp; RAICOM National Final (AI Vision Application) – <strong>First Prize</strong></li>
     <li><strong>2025.10</strong> &nbsp; Shenzhen University 2024-2025 Academic Year "Star of Double Innovations (Group)" – <strong>Second Prize</strong></li>
     <li><strong>2025.10</strong> &nbsp; Shenzhen University 2024-2025 Academic Year "Star of Double Innovations" – <strong>Second Prize</strong></li>
