--- a/index.html
+++ b/index.html
@@ -99,14 +99,14 @@
 
   <h2>Competitions & Honors</h2>
   <ul>
-    <li><strong>2025.12</strong> &nbsp; 2025 7th NCCCU - C++ Programming (South China Region) – <strong>Third Prize</strong></li>
-    <li><strong>2025.10</strong> &nbsp; RAICOM National Final (AI Vision Application) – <strong>First Prize</strong></li>
+    <li><strong>2025.12</strong> &nbsp; 2025 7th NCCCU South China Region (C++ Programming) – <strong>Third Prize</strong></li>
+    <li><strong>2025.10</strong> &nbsp; 2025 RAICOM National Final (AI Vision Application) – <strong>First Prize</strong></li>
     <li><strong>2025.10</strong> &nbsp; Shenzhen University 2024-2025 Academic Year "Star of Double Innovations (Group)" – <strong>Second Prize</strong></li>
     <li><strong>2025.10</strong> &nbsp; Shenzhen University 2024-2025 Academic Year "Star of Double Innovations" – <strong>Second Prize</strong></li>
-    <li><strong>2025.08</strong> &nbsp; RAICOM National Final (Programming Skills) – <strong>Second Prize</strong></li>
-    <li><strong>2025.07</strong> &nbsp; RAICOM Guangdong (AI Vision Application) – <strong>First Prize</strong></li>
-    <li><strong>2025.07</strong> &nbsp; RAICOM Guangdong (Programming Skills) – <strong>Second Prize</strong></li>
-    <li><strong>2025.06</strong> &nbsp; Guangdong Undergraduate Computer Design Contest (AI Vision Challenge) – <strong>Third Prize</strong></li>
+    <li><strong>2025.08</strong> &nbsp; 2025 RAICOM National Final (Programming Skills) – <strong>Second Prize</strong></li>
+    <li><strong>2025.07</strong> &nbsp; 2025 RAICOM Guangdong (AI Vision Application) – <strong>First Prize</strong></li>
+    <li><strong>2025.07</strong> &nbsp; 2025 RAICOM Guangdong (Programming Skills) – <strong>Second Prize</strong></li>
+    <li><strong>2025.06</strong> &nbsp; 2025 Guangdong Undergraduate Computer Design Contest (AI Vision Challenge) – <strong>Third Prize</strong></li>
     <li><strong>2025.05</strong> &nbsp; 16th Blue Bridge Cup (C/C++ Programming, Guangdong Division, Group B) – <strong>First Prize</strong></li>
   </ul>
 
