--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <h1>Qiaoyu Zhu 朱乔玉</h1>
   <div class="info-container">
     <div class="info">
-      <div class="subtitle"><strong>Undergraduate、Intern at VCC</strong></div>
+      <div class="subtitle"><strong>Undergraduate、Research Intern at VCC</strong></div>
       <p><strong>Email:</strong> qiaoyuzhu.stu@gmail.com</p>
       <p><strong>Tel:</strong> +86-15170627873</p>
       <p><strong>Birth:</strong> July 2004</p>
@@ -89,7 +89,7 @@
 
   <h2>Biography</h2>
   <p>
-    I am Qiaoyu Zhu, a senior undergraduate in the Experimental Class of Mathematics and Computer Science, <a href="https://math.szu.edu.cn/" target="_blank"> School of Mathematical Sciences</a>, <a href="https://www.szu.edu.cn/" target="_blank">Shenzhen University</a>. I am currently an intern at the <a href="https://vcc.tech/" target="_blank">Visual Computing Research Center (VCC)</a>, <a href="https://csse.szu.edu.cn/" target="_blank">College of Computer Science & Software Engineering</a>, and will continue at VCC as a direct-entry Ph.D. student under the supervision of <a href="https://vcc.tech/~huihuang/home" target="_blank">Prof. Hui Huang</a>.
+    I am Qiaoyu Zhu, a senior undergraduate in the Experimental Class of Mathematics and Computer Science, <a href="https://math.szu.edu.cn/" target="_blank"> School of Mathematical Sciences</a>, <a href="https://www.szu.edu.cn/" target="_blank">Shenzhen University</a>. I am currently a research intern at the <a href="https://vcc.tech/" target="_blank">Visual Computing Research Center (VCC)</a>, <a href="https://csse.szu.edu.cn/" target="_blank">College of Computer Science & Software Engineering</a>, <a href="https://www.szu.edu.cn/" target="_blank">Shenzhen University</a>, and will continue at VCC as a direct-entry Ph.D. student under the supervision of <a href="https://vcc.tech/~huihuang/home" target="_blank">Prof. Hui Huang</a>.
   </p>
 
   <h2>Education</h2>
