--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <p><strong>Email:</strong> qiaoyuzhu.stu@gmail.com</p>
       <p><strong>Tel:</strong> +86-15170627873</p>
       <p><strong>Birth:</strong> July 2004</p>
-      <p><strong>Location:</strong> Room 702, Building L6, South Campus of Shenzhen</p>
+      <p><strong>Location:</strong> Room 702, Building L6, South Campus of Shenzhen University</p>
     </div>
     <div class="profile-photo">
       <img src="photo.png" alt="Profile Photo">
