--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     body{
       margin:0;
       background:#f2f2f2;
-      font-family:"Times New Roman",serif;
+      font-family:"Arial",serif;
       line-height:1.6;
       color:#333;
 
