--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <h1>Qiaoyu Zhu 朱乔玉</h1>
   <div class="info-container">
     <div class="info">
-      <div class="subtitle"><strong>Undergraduate、Research Intern at VCC</strong></div>
+      <div class="subtitle"><strong>Undergraduate in SZU、Research Intern at VCC</strong></div>
       <p><strong>Email:</strong> qiaoyuzhu.stu@gmail.com</p>
       <p><strong>Tel:</strong> +86-15170627873</p>
       <p><strong>Birth:</strong> July 2004</p>
