--- a/index.html
+++ b/index.html
@@ -19,6 +19,19 @@
       flex-direction:column;
     }
 
+
+    :lang(zh), 
+    :lang(zh-CN), 
+    :lang(zh-Hans){
+      font-family:
+        "PingFang SC",
+        "Microsoft YaHei",
+        "Heiti SC",
+        "Noto Sans CJK SC",
+        sans-serif;
+    }
+
+
     .paper{
       flex:1;                   
       width:230mm;                      
