--- a/index.html
+++ b/index.html
@@ -39,14 +39,6 @@
         border-radius:0;
       }
     }
-    .chinese-name{
-      font-family:
-        "PingFang SC",
-        "Microsoft YaHei",
-        "Heiti SC",
-        "Noto Sans CJK SC",
-        sans-serif;
-    }
 
 
     h1{color:#527bbd;margin-bottom:5px;border-bottom:none;}
@@ -84,11 +76,7 @@
 
 <div class="paper">  
 
-  <h1>
-    Qiaoyu Zhu 
-    <span class="chinese-name">朱乔玉</span>
-  </h1>
-
+  <h1>Qiaoyu Zhu 朱乔玉</h1>
   <div class="info-container">
     <div class="info">
       <div class="subtitle"><strong>Undergraduate in SZU、Research Intern at VCC</strong></div>
