--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
 
   <div class="footer">
     <img src="Logo/vcc.png" alt="VCC Logo">
-    <span>© Qiaoyu Zhu. VISUAL COMPUTING RESEARCH CENTER.</span>
-    <span>Shenzhen University, China.</span>
+    <span>© Qiaoyu Zhu. VISUAL COMPUTING RESEARCH CENTER</span>
+    <span>Shenzhen University, China</span>
     <img src="Logo/szu.png" alt="SZU Logo">
   </div>
 
