--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   <div class="footer">
     <img src="Logo/vcc.png" alt="VCC Logo">
     <div class="footer-text">
-       <div>© Qiaoyu Zhu. VISUAL COMPUTING RESEARCH CENTER.</div>
+       <div>© Qiaoyu Zhu. Visual Computing Research Center</div>
        <div>Shenzhen University, China</div>
     </div>
     <img src="Logo/szu.png" alt="SZU Logo">
